Cleanup code style for tab completion and add comments.